--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,3 @@
-.visually-hidden {
-  position: absolute;
-
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 body {
     margin: 0;
     padding: 0;
@@ -22,6 +9,19 @@ body {
     color: #283136;
     
     background-color: #ffffff;
+}
+
+.visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 a {
@@ -76,7 +76,24 @@ a {
     color: rgba(255,255,255,0.3)
 }
 
+.main-header {
+    width: 100%;
+    min-height: 95px;
+    background-color: #eeeeee;
+    outline: 1px solid red;
+}
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    outline: 1px solid yellow;
+}
+
 .main-navigation {
+    display: flex;
+    
     line-height: 30px;
     font-weight: 500;
     color: #000000;
@@ -85,8 +102,30 @@ a {
     background-color: #eeeeee;
 }
 
-.site-navigation,
-.user-block {
+.main-navigation .logo {
+    width: 160px;
+    height: 66px;
+    outline: 1px solid green;
+    margin-right: 200px;
+}
+
+.main-navigation .site-navigation {
+    margin: 0;
+    padding: 0;
+    width: 440px;
+    min-height: 12px;
+    outline: 1px solid green;
+}
+
+.main-navigation .user-block {
+    margin: 0;
+    padding: 0;
+    width: 160px;
+    min-height: 15px;
+    outline: 1px solid green;
+    margin-left: auto;
+    margin-right: 0;
+
     list-style: none;
 }
 
@@ -117,18 +156,38 @@ a {
     font-weight: 500;
 }
 
-.slider-item-1{
+.slider-item-1 {
     background-image: url("../img/slide-1.png")
 }
-.slider-item-2{
+
+.slider-item-2 {
     background-image: url("../img/slide-2.png")
 }
-.slider-item-3{
+
+.slider-item-3 {
     background-image: url("../img/slide-3.png")
 }
 
-.services-item {
+.services-list {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    margin-bottom: 80px;
+        
     list-style: none;
+}
+
+.services-list .services-item {
+    margin: 0;
+    margin-right: 100px;
+    padding: 0;
+    width: 300px;
+    min-height: 350px;
+    outline: 1px solid green;
+}
+
+.services-item:nth-child(3) {
+    margin-right: 60px;
 }
 
 .services-item h3 {
@@ -139,11 +198,33 @@ a {
     text-transform: uppercase; 
 }
 
+.about-us {
+    display: flex;
+    margin-bottom: 80px;
+}
+
 .about-us-advantages {
     font-size: 45px;
     line-height: 45px;
     font-weight: 500;
     color: #000000;
+}
+
+.about-us .about-us-main {
+    margin: 0;
+    padding: 0;
+    width: 680px;
+    min-height: 370px;
+    outline: 1px solid green;
+}
+
+.about-us .about-us-since{
+    margin: 0;
+    margin-left: auto;
+    padding: 0;
+    width: 380px;
+    min-height: 407px;
+    outline: 1px solid green; 
 }
 
 .about-us-services,
@@ -155,7 +236,7 @@ a {
     color: #000000; 
 }
 
-.value-item {
+.value {
     list-style: none;
 }
 
@@ -165,12 +246,54 @@ a {
     font-weight: 700;
     color: #000000; 
 }
+
 .value-text {
     line-height: 18px;   
 }
 
-.partner-item {
+.partners-list {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    
     list-style: none;
+}
+
+.partners-list .partner-item {
+    margin: 0;
+    margin-bottom: 42px;
+    margin-right: 40px;
+    padding: 0;
+    width: 260px; 
+    min-height: 83px;
+    outline: 1px solid green;
+}
+
+.partner-item:nth-child(4n) {
+    margin-right: 0;
+}
+
+.footer {
+    width: 100%;
+    min-height: 512px;
+    display: flex;
+    outline: 1px solid red;  
+}
+
+.address {
+    margin: 0;
+    padding: 0;
+    width: 319px;
+    min-height: 308px;
+    outline: 1px solid green;
+}
+
+.footer-social {
+    margin: 0;
+    padding: 0;
+    width: 1000px;
+    min-height: 64px;
+    outline: 1px solid green;
 }
 
 .studio-name {
@@ -191,7 +314,7 @@ a {
     color: #000000;   
 }
 
-.user-text-list li {
+.user-text-list {
     list-style: none;
 }
 
@@ -233,6 +356,11 @@ user-text-list label:focus {
 }
 
 .page-title {
+    margin: 0;
+    padding: 0;
+    padding-top: 11px;
+    padding-bottom: 117px;
+
     font-size: 55px;
     line-height: 55px;
     font-weight: 500;
@@ -291,12 +419,51 @@ user-text-list label:focus {
     background-color: #d5d5d5;
 }
 
-.sort-form li {
+.sort-category {
     list-style: none;
 }
 
-.catalog-list li {
-    list-style: none;  
+.wrap-filters-catalog {
+    display: flex;
+    justify-content: space-between; 
+}
+
+.filters {
+    margin: 0;
+    margin-bottom: auto;
+    padding: 0;
+    width: 260px;
+    min-height: 775px;
+    outline: 1px solid green;
+}
+
+.wrap-sort-catalog {
+    margin: 0;
+    margin-bottom: 60px;
+    padding: 0;
+    width: 760px;
+    min-height: 2100px;
+    outline: 1px solid green;
+}
+
+.catalog-list {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap; 
+    
+    list-style: none; 
+}
+
+.catalog-list .catalog-item {
+    width: 360px;
+    margin-bottom: 33px;
+    margin-right: 40px;
+    outline: 1px solid green;
+}
+
+.catalog-item:nth-child(2n) {
+    margin-right: 0;
 }
 
 .template-name {
@@ -311,7 +478,10 @@ user-text-list label:focus {
     line-height: 18px; 
 }
 
-.pagination-list li {
+.pagination-list {
+    margin: 0;
+    padding: 0;  
+    
     list-style: none;
 }
 
@@ -343,186 +513,10 @@ user-text-list label:focus {
 }
 
 .address .phone {
-    list-style: none;
+    font-style: none;
     font-size: 16px;
     line-height: 18px;
     font-weight: 400;
     color: #666666;
 }
-
-.main-header {
-    width: 100%;
-    min-height: 95px;
-    background-color: #eeeeee;
-    outline: 1px solid red;
-}
-.container {
-    width: 1200px;
-    margin: 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    outline: 1px solid yellow;
-}
-.main-navigation {
-    text-transform: uppercase;
-    display: flex;
-}
-.main-navigation .logo {
-    width: 160px;
-    height: 66px;
-    outline: 1px solid green;
-    margin-right: 200px;
-}
-.main-navigation .site-navigation {
-    margin: 0;
-    padding: 0;
-    width: 440px;
-    min-height: 12px;
-    outline: 1px solid green;
-}
-.main-navigation .user-block {
-    margin: 0;
-    padding: 0;
-    width: 160px;
-    min-height: 15px;
-    outline: 1px solid green;
-    margin-left: auto;
-    margin-right: 0;
-}
-
-.services-list {
-    margin: 0;
-    padding:0;
-    display: flex;
-    margin-bottom: 80px;
-}
-.services-list .services-item {
-    margin: 0;
-    margin-right: 100px;
-    padding: 0;
-    width: 300px;
-    min-height: 350px;
-    outline: 1px solid green;
-}
-.services-item:nth-child(3) {
-    margin-right: 60px;
-}
-
-.about-us {
-    display:flex;
-    margin-bottom: 80px;
-}
-.about-us .about-us-main {
-    margin: 0;
-    padding: 0;
-    width: 680px;
-    min-height: 370px;
-    outline: 1px solid green;
-}
-.about-us .about-us-since{
-    margin: 0;
-    margin-left: auto;
-    padding: 0;
-    width: 380px;
-    min-height: 407px;
-    outline: 1px solid green; 
-}
-
-.partners-list {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-}
-.partners-list .partner-item {
-    margin: 0;
-    margin-bottom: 42px;
-    padding: 0;
-    width: 260px; 
-    min-height: 83px;
-    outline: 1px solid green;
-}
-.footer {
-    width: 100%;
-    min-height: 512px;
-    display: flex;
-    outline: 1px solid red;  
-}
-.address {
-    margin: 0;
-    padding: 0;
-    width: 319px;
-    min-height: 308px;
-    outline: 1px solid green;
-}
-.footer-social {
-    margin: 0;
-    padding: 0;
-    width: 1000px;
-    min-height: 64px;
-    outline: 1px solid green;
-}
-
-.page-title {
-    margin: 0;
-    margin-top: 11px;
-    margin-bottom: 117px;
-    padding: 0;
-}
-
-.promo {
-    background-color: #eeeeee;
-}
-
-.wrap-filters-catalog {
-    display: flex;
-    justify-content: space-between; 
-}
-
-.filters {
-    margin: 0;
-    margin-bottom: auto;
-    padding: 0;
-    width: 260px;
-    min-height: 775px;
-    outline: 1px solid green;
-}
-.wrap-sort-catalog {
-    margin: 0;
-    margin-bottom: 60px;
-    padding: 0;
-    width: 760px;
-    min-height: 2100px;
-    outline: 1px solid green;
-}
-
-.catalog-list {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap; 
-    justify-content: space-between;
-}
-.catalog-list .catalog-item {
-    width: 360px;
-    margin-bottom: 33px;
-    outline: 1px solid green;
-}
-.pagination-list {
-    margin: 0;
-    padding: 0;   
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ 
