--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,23 @@
 body {
     margin: 0;
     padding: 0;
-    
+
     font-family: "Roboto", "Arial", sans-serif;
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
     color: #283136;
-    
+
     background-color: #ffffff;
 }
 
-.visually-hidden {
+a {
+    text-decoration: none;
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
 
   width: 1px;
@@ -20,67 +26,11 @@ body {
   border: 0;
   padding: 0;
 
+  white-space: nowrap;
+
+  clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
-
-a {
-    text-decoration: none;  
-}
-
-.button {
-    font-family: inherit;
-    font-size: inherit;
-    line-height: 18px;
-    font-weight: 500;
-    text-transform: uppercase;
-    vertical-align: middle;
-    color: #ffffff;
-    
-    border: none;
-}
-
-.button-red {
-    background-color: #fb565a;
-}
-.button-red:hover,
-.button-red:focus {
-    background-color: #e74246;
-}
-.button-red:active {
-    background-color: #d7373b;
-    color: rgba(255,255,255,0.3)
-}
-
-.button-green {
-    background-color: #00ca74;
-}
-.button-green:hover,
-.button-green:focus {
-    background-color: #00bc6c;
-}
-.button-green:active {
-    background-color: #00aa62;
-    color: rgba(255,255,255,0.3)
-}
-
-.button-yellow {
-    background-color: #efc84a;
-}
-.button-yellow:hover,
-.button-yellow:focus {
-    background-color: #eab534;
-}
-.button-yellow:active {
-    background-color: #e5a722;
-    color: rgba(255,255,255,0.3)
-}
-
-.main-header {
-    width: 100%;
-    min-height: 95px;
-    background-color: #eeeeee;
-    outline: 1px solid red;
 }
 
 .container {
@@ -91,14 +41,75 @@ a {
     outline: 1px solid yellow;
 }
 
+.button {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+    vertical-align: middle;
+    color: #ffffff;
+
+    border: none;
+}
+
+.button-red {
+    background-color: #fb565a;
+}
+
+.button-red:hover,
+.button-red:focus {
+    background-color: #e74246;
+}
+
+.button-red:active {
+    background-color: #d7373b;
+    color: rgba(255, 255, 255, 0.3)
+}
+
+.button-green {
+    background-color: #00ca74;
+}
+
+.button-green:hover,
+.button-green:focus {
+    background-color: #00bc6c;
+}
+
+.button-green:active {
+    background-color: #00aa62;
+    color: rgba(255, 255, 255, 0.3)
+}
+
+.button-yellow {
+    background-color: #efc84a;
+}
+
+.button-yellow:hover,
+.button-yellow:focus {
+    background-color: #eab534;
+}
+
+.button-yellow:active {
+    background-color: #e5a722;
+    color: rgba(255, 255, 255, 0.3)
+}
+
+.main-header {
+    width: 100%;
+    min-height: 95px;
+    background-color: #eeeeee;
+    outline: 1px solid red;
+}
+
 .main-navigation {
     display: flex;
-    
+
     line-height: 30px;
     font-weight: 500;
     color: #000000;
-    text-transform: uppercase; 
-    
+    text-transform: uppercase;
+
     background-color: #eeeeee;
 }
 
@@ -107,31 +118,50 @@ a {
     height: 66px;
     outline: 1px solid green;
     margin-right: 200px;
+    margin-top: 50px;
 }
 
-.main-navigation .site-navigation {
+.site-navigation {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 640px;
     margin: 0;
     padding: 0;
-    width: 440px;
+    width: 640px;
+    
     min-height: 12px;
     outline: 1px solid green;
-}
-
-.main-navigation .user-block {
-    margin: 0;
-    padding: 0;
-    width: 160px;
-    min-height: 15px;
-    outline: 1px solid green;
-    margin-left: auto;
-    margin-right: 0;
 
     list-style: none;
 }
+.site-navigation a {
+    display: block;
+    margin-top: 80px;
+    margin-right: 50px;
+}
+.site-navigation:last-child {
+    margin-right: 0;
+}   
+.user-block {
+    display: flex;
+    margin: 0;
+    margin-left: auto;
+    padding: 0;
+    max-width: 160px;
+    list-style: none; 
 
-.site-navigation a,
-.user-block a {
-    color: #000000;  
+    min-height: 15px;
+}
+ .user-block .login-link {
+    display: inline-block;
+    margin-top: 80px;
+    margin-left: 50px;
+}
+
+.login-link::before {
+ vertical-align: middle;
+ margin-right: 50px; 
+ content: "";
 }
 
 .site-navigation a:hover,
@@ -173,7 +203,7 @@ a {
     padding: 0;
     display: flex;
     margin-bottom: 80px;
-        
+
     list-style: none;
 }
 
@@ -195,7 +225,7 @@ a {
     line-height: 30px;
     font-weight: 700;
     color: #000000;
-    text-transform: uppercase; 
+    text-transform: uppercase;
 }
 
 .about-us {
@@ -218,13 +248,13 @@ a {
     outline: 1px solid green;
 }
 
-.about-us .about-us-since{
+.about-us .about-us-since {
     margin: 0;
     margin-left: auto;
     padding: 0;
     width: 380px;
     min-height: 407px;
-    outline: 1px solid green; 
+    outline: 1px solid green;
 }
 
 .about-us-services,
@@ -233,7 +263,7 @@ a {
     line-height: 24px;
     font-weight: 700;
     text-transform: uppercase;
-    color: #000000; 
+    color: #000000;
 }
 
 .value {
@@ -244,18 +274,19 @@ a {
     font-size: 45px;
     line-height: 45px;
     font-weight: 700;
-    color: #000000; 
+    color: #000000;
 }
 
 .value-text {
-    line-height: 18px;   
+    line-height: 18px;
 }
 
 .partners-list {
     margin: 0;
     padding: 0;
     display: flex;
-    
+    flex-wrap: wrap;
+
     list-style: none;
 }
 
@@ -264,7 +295,7 @@ a {
     margin-bottom: 42px;
     margin-right: 40px;
     padding: 0;
-    width: 260px; 
+    width: 260px;
     min-height: 83px;
     outline: 1px solid green;
 }
@@ -273,19 +304,19 @@ a {
     margin-right: 0;
 }
 
-.footer {
-    width: 100%;
-    min-height: 512px;
-    display: flex;
-    outline: 1px solid red;  
-}
-
 .address {
     margin: 0;
     padding: 0;
     width: 319px;
     min-height: 308px;
     outline: 1px solid green;
+}
+
+.footer {
+    width: 100%;
+    min-height: 512px;
+    display: flex;
+    outline: 1px solid red;
 }
 
 .footer-social {
@@ -300,7 +331,7 @@ a {
     font-size: 18px;
     line-height: 30px;
     font-weight: 700;
-    color: #000000;    
+    color: #000000;
 }
 
 .social-button {
@@ -311,7 +342,7 @@ a {
     font-size: 36px;
     line-height: 36px;
     font-weight: 700;
-    color: #000000;   
+    color: #000000;
 }
 
 .user-text-list {
@@ -322,7 +353,7 @@ a {
     font-size: 16px;
     line-height: 18px;
     font-weight: 700;
-    color: #000000;  
+    color: #000000;
 }
 
 .user-text-list input,
@@ -347,12 +378,12 @@ user-text-list label {
     font-size: 16px;
     line-height: 18px;
     font-weight: 400;
-    color: rgba(68,68,68,0.5);     
+    color: rgba(68, 68, 68, 0.5);
 }
 
 user-text-list label:focus {
     font-weight: 400;
-    color: #444444;     
+    color: #444444;
 }
 
 .page-title {
@@ -365,7 +396,7 @@ user-text-list label:focus {
     line-height: 55px;
     font-weight: 500;
     color: #000000;
-    background-color: #eeeeee;      
+    background-color: #eeeeee;
 }
 
 .filter-headline {
@@ -373,14 +404,14 @@ user-text-list label:focus {
     line-height: 30px;
     font-weight: 700;
     color: #000000;
-    text-transform: uppercase;    
+    text-transform: uppercase;
 }
 
 .range-word {
     font-size: 16px;
     line-height: 22px;
     font-weight: 400;
-    text-transform: uppercase;   
+    text-transform: uppercase;
 }
 
 .filter-option {
@@ -388,7 +419,7 @@ user-text-list label:focus {
 }
 
 .features {
-    list-style: none;  
+    list-style: none;
 }
 
 .filter-button {
@@ -425,7 +456,7 @@ user-text-list label:focus {
 
 .wrap-filters-catalog {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
 }
 
 .filters {
@@ -450,9 +481,9 @@ user-text-list label:focus {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-wrap: wrap; 
-    
-    list-style: none; 
+    flex-wrap: wrap;
+
+    list-style: none;
 }
 
 .catalog-list .catalog-item {
@@ -471,17 +502,17 @@ user-text-list label:focus {
     line-height: 30px;
     font-weight: 700;
     text-transform: uppercase;
-    color: #000000;  
+    color: #000000;
 }
 
 .catalog-pop-up p {
-    line-height: 18px; 
+    line-height: 18px;
 }
 
 .pagination-list {
     margin: 0;
-    padding: 0;  
-    
+    padding: 0;
+
     list-style: none;
 }
 
@@ -490,7 +521,7 @@ user-text-list label:focus {
     line-height: 18px;
     font-weight: 500;
     text-transform: uppercase;
-    color: #000000; 
+    color: #000000;
     background-color: #eeeeee;
 }
 
@@ -499,8 +530,8 @@ user-text-list label:focus {
     line-height: 18px;
     font-weight: 500;
     text-transform: uppercase;
-    color: #000000; 
-    
+    color: #000000;
+
     border: 3px solid #dbdbdb;
 }
 
@@ -519,4 +550,3 @@ user-text-list label:focus {
     font-weight: 400;
     color: #666666;
 }
- 
